--- a/style.css
+++ b/style.css
@@ -80,7 +80,12 @@ canvas {
     justify-content: center;
     margin: 50px;
 }
-
+h1 {
+    font-size: 36px;
+}
+#title {
+    font-size: 48px;
+}
 #stats {
     display: flex;
     align-items: center;
@@ -108,4 +113,44 @@ canvas {
     border: none;
     border-radius: 10px;
     cursor: pointer;
+}
+
+#stats-row {
+    display: flex;
+    flex-direction: column;
+}
+@media screen and (max-width: 1000px) {
+    body {
+        min-height: 400px;
+        min-width: 500px;
+    }
+    #panel {
+        display: flex;
+        flex-direction: column;
+    }
+    #stats {
+        flex-direction: column;
+        width: auto;
+        margin: 30px 0;
+    }
+    h1, h2 {
+        font-size: 24px;
+    }
+    #title {
+        font-size: 48px;
+    }
+    #clock, #points {
+        font-size: 24px;
+        
+    }
+    #stats-row {
+        flex-direction: row;
+    }
+    #clock-div, #points-div {
+        flex-grow: 1;
+        margin: 10px;
+    }
+    #resett {
+        width: 100%;
+    }
 }
