--- a/style.css
+++ b/style.css
@@ -121,8 +121,8 @@ h1 {
 }
 @media screen and (max-width: 1000px) {
     body {
-        min-height: 400px;
-        min-width: 500px;
+        min-height: auto;
+        min-width: auto;
     }
     #panel {
         display: flex;
